tabs.css
/* ... */
/*Override global Animations*/
[data-override-initial-global-animation].slideIn,
[data-override-initial-global-animation].fadeIn,
[data-override-initial-global-animation].scaleIn,
[data-override-initial-global-animation].flexIn,
[data-override-initial-global-animation].preFade,
[data-override-initial-global-animation].preScale,
[data-override-initial-global-animation].preFlex,
[data-override-initial-global-animation].preSlide {
  opacity: 1;
  transform: initial;
  clip-path: initial;
}

/*Shape Block Overrides*/
.tab-content [data-stretched-to-fill] > .sqs-shape {
  width: 100%;
  height: 100%;
}

/*Edge To Edge*/
.wm-tabs.edge-to-edge .tab-content > section .fluid-engine {
  grid-template-columns: 0 repeat(8, minmax(0, var(--cell-max-width))) 0;
  margin-left: calc(-1 * var(--wm-column-gap));
  margin-right: calc(-1 * var(--wm-column-gap));
}
@media(min-width: 767px) {
  .wm-tabs.edge-to-edge .tab-content > section .fluid-engine {
    grid-template-columns: 0px repeat(24, minmax(0, var(--cell-max-width))) 0px;
  }
}

/*Moving Tabs for initialization*/
.wm-tabs.moving-tabs-for-initialization {
  position: absolute !important;
  z-index: -1 !important;
  height: 0px !important;
  overflow: hidden !important;
  opacity: 0 !important;
  visibility: hidden !important;
}

/*Floating Blocks in Class Engine*/
.fluid-engine .wm-tabs .sqs-layout .sqs-block[class*=float-right],
.fluid-engine .wm-tabs .sqs-layout  .sqs-block[class*=float-left]{
  width:inherit;
}


/*Default Settings*/
.wm-tabs {
  /*Tabs Navigation*/
  --tabs-nav-border-color: hsla(var(--wm-text-hsl), 50%);
  --tabs-nav-border-width: 2px;

  --tabs-header-gap: 8px;
  --nav-padding-bottom: 8px;
  --nav-padding-right: 8px;
  --nav-justify-items: center;
  --nav-max-width: var(--sqs-site-max-width);
  --nav-border-radius: 0px;
  --nav-background-color: transparent;

  --tab-button-align-items: center;
  --tab-button-justify-content: center;
  --tab-button-flex-direction: column;
  --tab-button-padding-y: 8px;
  --tab-button-padding-x: 18px;
  --tab-button-font-size: inherit;
  --tab-button-font-weight: inherit;
  --tab-button-border-radius: 5px;
  --tab-button-border-width: 0px;
  --tab-button-border-color: currentColor;
  --tab-button-background: transparent;
  --tab-button-color: currentColor;

  --tab-button-hover-opacity: 0.6;

  --tab-button-active-font-weight: inherit;
  --tab-button-active-border-color: currentColor;
  --tab-button-active-background: transparent;
  --tab-button-active-color: hsla(var(--wm-accent-inverse-hsl), 1);

  --tab-indicator-display: block;
  --tab-indicator-track-background: transparent;
  --tab-indicator-track-size: 100%;
  --active-indicator-top: var(--tab-button-active-top);
  --active-indicator-left: var(--tab-button-active-left);
  --active-indicator-height: var(--tab-button-active-height);
  --active-indicator-width: var(--tab-button-active-width);
  --active-indicator-color: hsla(var(--wm-accent-hsl), 1);
  --active-indicator-border-radius: var(--tab-button-border-radius);
  --active-indicator-border-color: currentColor;
  --active-indicator-border-width: 0px;

  --tab-button-image-aspect-ratio: 1;
  --tab-button-image-width: 150px;
  --tab-button-image-border-radius: var(--tab-button-border-radius);

  --scroll-indicator-size: 25px;
  --scroll-indicator-color: hsla(var(--wm-text-hsl), 100%);

  --nav-scrollbar-display: block;
  --nav-scrollbar-size: 4px;
  --nav-scrollbar-height: var(--nav-scrollbar-size);
  --nav-scrollbar-width: var(--nav-scrollbar-size);
  --nav-scrollbar-color: hsla(var(--wm-text-hsl), 25%);
  --nav-scrollbar-track-color: hsla(var(--wm-text-hsl), 10%);

  /*Vertical Navigation*/
  --vertical-tabs-navbar-width: 250px;

  /*Select Navigation*/
  --select-menu-background-color: var(--siteBackgroundColor);
  --select-menu-border-color: hsla(var(--lightAccent-hsl), 1);
  --select-menu-border-width: 1px;

  --select-navigation-button-background: transparent;
  --select-navigation-button-color: currentColor;
  --select-navigation-button-border-width: 1px;
  --select-navigation-button-border-color: hsla(var(--wm-text-hsl), 0.25);
  --select-navigation-button-border-radius: 5px;

  --select-button-color: currentColor;
  --select-button-background: transparent;
  --select-button-font-size: 1rem;
  --select-button-hover-background: hsla(var(--wm-text-hsl), 0.25);
  --select-button-active-color: hsla(var(--wm-accent-hsl), 1);

  --select-button-padding-y: 8px;
  --select-button-padding-x: 12px;

  /*Content*/
  --tab-content-padding-start: 8px;
  --tab-content-border-color: currentColor;
  --tab-content-border-width: 0px;
  --tab-content-border-style: solid;
}

:root .wm-tabs {
  --wm-accent-hsl: var(--accent-hsl);
  --wm-accent-inverse-hsl: var(--safeInverseAccent-hsl);
  --wm-background-hsl: var(--white-hsl);
  --wm-text-hsl: var(--black-hsl);
}

